# collision-detection-gjk

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt  Sanitizers.cmake  demo  presentation.url
app/: convex_hull.cpp  convex_hull.hpp  demo.cpp  input.cpp  input.hpp  kb_input.cpp  kb_input.hpp  load_mesh.cpp  load_mesh.h  load_mesh.hpp  math.cpp  math.hpp  mesh_tools.cpp  mesh_tools.hpp  rendering.cpp  rendering.hpp  test_gjk.cpp  test_load_mesh.cpp  test_math.cpp
demo_meshes/: bad.off  cone.off  cube.off  monkey.off  monkey_cvx.off
include/: gjk.hpp
